[package]
name = "msgpackin"
version = "0.0.2"
authors = ["neonphog <neonphog@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/msgpackin_core"
repository = "https://github.com/neonphog/msgpackin"
description = "Msgpackin pure Rust MessagePack encoding / decoding library"
keywords = ["msgpack", "MessagePack", "no_std"]
categories = ["encoding"]
edition = "2021"

[dependencies]
msgpackin_core = { version = "=0.0.2", path = "../msgpackin_core" }
serde = { version = "1.0", optional = true, default-features = false, features = [ "alloc" ] }
futures-io = { version = "0.3", optional = true, default-features = false, features = [ "std" ] }
tokio = { version = "1", optional = true, default-features = false }

[dev-dependencies]
futures = "0.3.19"
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive" ] }

[features]
default = ["std"]

# Std is required for std::Error, Read, and Write traits / handlers.
std = []

# Working around rust weak dependencies until that is stablized.
# You need to manually enable serde_std if you also enable std and serde... :(
serde_std = ["serde", "std", "serde/std"]
