[package]
name = "msgpackin"
version = "0.0.4"
authors = ["neonphog <neonphog@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/msgpackin"
repository = "https://github.com/neonphog/msgpackin"
description = "Msgpackin pure Rust MessagePack encoding / decoding library"
keywords = ["msgpack", "MessagePack", "no_std"]
categories = ["encoding"]
edition = "2021"

[package.metadata.docs.rs]
# build docs.rs page with all features enabled so we can see the APIs
all-features = true

[dependencies]
msgpackin_core = { version = "0.0.4", path = "../msgpackin_core" }
serde = { version = "1.0", optional = true, default-features = false, features = [ "alloc" ] }
futures-io = { version = "0.3", optional = true, default-features = false, features = [ "std" ] }
tokio = { version = "1", optional = true, default-features = false }

[dev-dependencies]
futures = "0.3.19"
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive" ] }

[features]
default = ["std"]

# Std is required for std::Error, Read, and Write traits / handlers.
std = [ "serde?/std" ]

# futures-io enables futures async integration. Implies "std".
futures-io = [ "dep:futures-io", "std" ]

# tokio enables tokio async integration. Implies "std".
tokio = [ "dep:tokio", "std" ]

# enables serialization / deserialization through serde.
serde = [ "dep:serde" ]

# This is included for backward compatibility
serde_std = ["dep:serde", "std", "serde/std"]
