[package]
name = "msgpackin_core"
version = "0.0.4"
authors = ["neonphog <neonphog@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/msgpackin_core"
repository = "https://github.com/neonphog/msgpackin"
description = "Msgpackin pure Rust MessagePack no_std encoding / decoding library"
keywords = ["msgpack", "MessagePack", "no_std"]
categories = ["encoding"]
edition = "2021"

[dependencies]
